--- a/pages/index.html
+++ b/pages/index.html
@@ -37,31 +37,23 @@
         <aside class="aside">
             <form action="#" id="form" class="form" method="post">
                 <div class="slct">
-                    <label for="slins">Instrumentador</label>
-                    <select name="slins" id="slins">
-                        <option value="DuxMapView">Dux MapView</option>
-                        <option value="DuxMapView">Dux SO</option>
+                    <label for="instru">Instrumentador</label>
+                    <select name="instru" id="slins">
                     </select>
                 </div>
                 <div class="slct">
-                    <label for="slins">Vendedor</label>
-                    <select name="slins" id="slins">
-                        <option value="DuxMapView">Dux MapView</option>
-                        <option value="DuxMapView">Dux SO</option>
+                    <label for="ven">Vendedor</label>
+                    <select name="ven" id="slins">
                     </select>
                 </div>
                 <div class="slct">
-                    <label for="slins">Doctor</label>
-                    <select name="slins" id="slins">
-                        <option value="DuxMapView">Dux MapView</option>
-                        <option value="DuxMapView">Dux SO</option>
+                    <label for="dr">Doctor</label>
+                    <select name="dr" id="slins">
                     </select>
                 </div>
                 <div class="slct">
-                    <label for="slins">Hospital</label>
-                    <select name="slins" id="slins">
-                        <option value="DuxMapView">Dux MapView</option>
-                        <option value="DuxMapView">Dux SO</option>
+                    <label for="hos">Hospital</label>
+                    <select name="hos" id="slins">
                     </select>
                 </div>
                 <div class="slct">                    
