--- a/pages/index.html
+++ b/pages/index.html
@@ -37,28 +37,28 @@
         <aside class="aside">
             <form action="#" id="form" class="form" method="post">
                 <div class="slct">
-                    <label for="instru">Instrumentador</label>
-                    <select name="instru" id="slins">
+                    <label for="Instrumentador">Instrumentador</label>
+                    <select name="Instrumentador" id="slins">
                     </select>
                 </div>
                 <div class="slct">
-                    <label for="ven">Vendedor</label>
-                    <select name="ven" id="slins">
+                    <label for="Vendedor">Vendedor</label>
+                    <select name="Vendedor" id="slins">
                     </select>
                 </div>
                 <div class="slct">
-                    <label for="dr">Doctor</label>
-                    <select name="dr" id="slins">
+                    <label for="Doctor">Doctor</label>
+                    <select name="Doctor" id="slins">
                     </select>
                 </div>
                 <div class="slct">
-                    <label for="hos">Hospital</label>
-                    <select name="hos" id="slins">
+                    <label for="Hospital">Hospital</label>
+                    <select name="Hospital" id="sHos">
                     </select>
                 </div>
                 <div class="slct">                    
-                    <button type="button" role="button"><i class="bx bxs-filter-alt"></i>Filtrar</button>
-                    <button type="button" role="button"><i class="bx bxs-filter-alt"></i>Limpiar Filtros</button>
+                    <button type="button" role="button" id="btnaddFil"><i class="bx bxs-filter-alt"></i>Filtrar</button>
+                    <button type="button" role="button" id="btnrevFil"><i class="bx bxs-filter-alt"></i>Limpiar Filtros</button>
                 </div>
             </form>
         </aside>
