--- a/pages/index.html
+++ b/pages/index.html
@@ -6,8 +6,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../sources/css/index.css">    
+    <script type="module" src="../sources/js/firebase.js"></script>
     <script type='text/javascript'
     src='https://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=ArqG4VUXzrsxfVPNZDS7pu3DCTbBXf4NazO7xFtayC1EqP4PcnG4rn1XskILNby5' async defer></script>
+
     <title>Dux Map View</title>
 </head>
 <body>
@@ -64,6 +66,6 @@
         </aside>
     </div>
 
-    <script src="../sources/js/dux_random_connection.js"></script>
+    <script type="module" src="../sources/js/dux_random_connection.js"></script>
 </body>
 </html>
